--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -304,7 +304,7 @@ section {
   transition: all 0.5s;
   z-index: 997;
   height: 90px;
-  background-color: var(--color-primary);
+  background-color: black;
 }
 
 .header.sticked {
